# ProRCA

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Examples/Example_1/: RCA.ipynb  fashion_data_with_anomalies_aggregated.csv  variable_dependency_graph.gv
docs/_build/doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  usage.doctree
docs/examples/Example_1/: Data_Generation.ipynb  RCA.ipynb
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  datagen.rst  examples.rst  index.rst  installation.rst  usage.rst
notebooks/: dag_relationships  test.ipynb  variable_dependency_graph.gv
prorca/: dag_builder.py
prorca.egg-info/: PKG-INFO
src/: anomaly.py  create_synthetic_data.py  pathway.py
src/anomaly/: adtk.py
src/data_generators/: synthetic_sales_data.py
src/prorca/: __init__.py  anomaly.py  dag_builder.py  pathway.py
tests/: test_anomaly.py  test_synthetic_data.py
