[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prorca"
version = "0.1.0"
description = "ProRCA - Root Cause Analysis Tool"
authors = [{ name = "profitops", email = "adawoud@profitops.ai"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "dowhy",
    "networkx",
    "graphviz",
    "adtk",
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0"]

[project.urls]
Repository = "https://github.com/profitopsai/ProRCA"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prorca", "anomaly", "data_generators"]