[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prorca"
version = "0.1.0"
authors = [
    { name = "Ahmed Dawoud", email = "adawoud@profitops.ai" },
]
description = "An end-to-end framework for diagnosing anomalies in complex operational environments by uncovering multi-hop causal pathways."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dowhy>=0.8",
    "networkx>=2.6",
    "graphviz>=0.16",
    "adtk>=0.6.2",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "numpy>=1.20",
    "pandas>=1.3",
    "IPython=>=7.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "black>=22.3",
    "flake8>=4.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
"Homepage" = "https://github.com/profitopsai/ProRCA"
"Bug Tracker" = "https://github.com/profitopsai/ProRCA/issues"
"Documentation" = "https://prorca.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prorca", "anomaly", "data_generators"]