[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prorca"
version = "0.1.0"
description = "ProRCA - Root Cause Analysis Tool"
authors = [{ name = "profitops", email = "adawoud@profitops.ai"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "dowhy",
    "networkx",
    "graphviz",
    "adtk",
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "Ipython",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "black>=22.3",
    "flake8>=4.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",  # Add this line
]

[project.urls]
"Homepage" = "https://github.com/profitopsai/ProRCA"
"Bug Tracker" = "https://github.com/profitopsai/ProRCA/issues"
"Documentation" = "https://prorca.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prorca", "anomaly", "data_generators"]